# agentic-eval-benchmark

./: LICENSE  README.md  evaluate.py  pyproject.toml
data/: emails.json  golden_summaries.csv  manifests.csv  predictions.csv  routes.csv
